# frontendmap

./: .gitignore  AGENTS.md  Cargo.toml
src/: AGENTS.md  cli.rs  main.rs  model.rs  store.rs
src/commands/: analyze.rs  mod.rs  nav.rs  query.rs
src/scanner/: AGENTS.md  api.rs  component.rs  mod.rs  project.rs  route.rs  store_scan.rs
